fix(tl-header): hamburger only visible on mobile, remove storybook control

--- a/packages/core/src/tegel-light/components/tl-header/tl-header.scss
+++ b/packages/core/src/tegel-light/components/tl-header/tl-header.scss
@@ -43,7 +43,16 @@
     display: block;
   }
 
-  &:has(.tl-icon--burger),
+  // Hamburger only visible on mobile
+  &:has(.tl-icon--burger) {
+    display: block;
+
+    @media (min-width: 992px) {
+      display: none;
+    }
+  }
+
+  // Brand always visible
   &:has(.tl-header__brand) {
     display: block;
   }
